<resources>
    <string name="app_name">AuthoritativeGuide</string>

    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="correct_toast">Correct!</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="question_oceans">The Pacific Ocean is larger thanthe Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Seaand the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest riverin the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepestfreshwater lake.</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="cheat_button">CHEAT!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>

    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="empty_crime_msg">没有Crime记录可以显示</string>
    <string name="add_one_immediately">立即添加一个</string>

    <string name="crime_suspect_text">CHOOSE SUSPECT</string>
    <string name="crime_call_suspect">CALL SUSPECT</string>
    <string name="crime_report_text">SEND CRIME REPORT</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>

    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>

</resources>
